--- a/pogeman.html
+++ b/pogeman.html
@@ -16,12 +16,15 @@
         <div id="elements">
             <img src="logo.png" alt="logo" id="logo">
             <h3 id="versionText">Red Version</h3>
-            <img src="Spr_RB_Red_2.png" alt="Trainer" id="trainer">
+            <img src="ball.png" alt="ball" id="ball">
+            <img src="Spr_RB_Red_22.png" alt="Trainer" id="trainer">
             <img src="char.png" class="pogey">
-            <h3 id="copyright">&#169'95.'96.'98 GAME FREAK inc.</h3> <!--Note: &#169 is copyright symbol -->
+            <h3 id="copyright">&#169<span id="spaceFix">'95.'96.'98</span> GAME FREAK inc.</h3> <!--Note: &#169 is copyright symbol -->
         </div>
-    </div>   
-    <audio src="theme.mp3" controls autoplay>Play theme</audio>
+    </div> 
+
+    <audio src="theme.mp3" controls >Play theme</audio>
+
 </body>
 
 </html> 
