--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 style="color: aliceblue">Click the logo to continue!</h1>
     
     <div id="screen">
-        <a href="pogeman.html" ><img src=LogoR.png alt="NintendoR" id="logoR"></a>    
+        <a href="pogeman.html" ><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>    
     </div>   
-    <audio src="bing.mp3" controls autoplay>Play theme</audio>
+    <audio src="sound/bing.mp3" controls autoplay>Play theme</audio>
 </body>
 
 </html> 
