--- a/pogeman.html
+++ b/pogeman.html
@@ -14,16 +14,16 @@
     <div id="screen">
         
         <div id="elements">
-            <img src="logo.png" alt="logo" id="logo">
+            <img src="image/logo.png" alt="logo" id="logo">
             <h3 id="versionText">Red Version</h3>
-            <img src="ball.png" alt="ball" id="ball">
-            <img src="Spr_RB_Red_22.png" alt="Trainer" id="trainer">
-            <img src="char.png" class="pogey">
+            <img src="image/ball.png" alt="ball" id="ball">
+            <img src="image/Spr_RB_Red_22.png" alt="Trainer" id="trainer">
+            <img src="image/char.png" class="pogey">
             <h3 id="copyright">&#169<span id="spaceFix">'95.'96.'98</span> GAME FREAK inc.</h3> <!--Note: &#169 is copyright symbol -->
         </div>
     </div> 
 
-    <audio src="theme.mp3" controls >Play theme</audio>
+    <audio src="sound/theme.mp3" controls >Play theme</audio>
 
 </body>
 
