Added scroll effect to change out monsters. bulba.png, squrtle.png, pika.png.
Loop is a specifically timed effect. Not expandable. :(

--- a/titleScreen.html
+++ b/titleScreen.html
@@ -23,13 +23,16 @@
             <img src="image/ball.png" alt="ball" id="ball">
             <img src="image/Spr_RB_Red_22.png" alt="Trainer" id="trainer">
             
-            <img src="image/char.png" class="pogey">
+            <img src="image/char.png" class="pogey firstPogey">
+            <img src="image/bulba.png" class="pogey secondPogey">
+            <img src="image/squrtle.png" class="pogey thirdPogey">
+            <img src="image/pika.png" class="pogey fourthPogey">
             
             <h3 id="copyright">&#169<span id="spaceFix">'95.'96.'98</span> GAME FREAK inc.</h3> <!--Note: &#169 is copyright symbol -->
         </div>
     </div> 
 
-    <audio src="sound/theme.mp3" controls >Play theme</audio>
+    <audio src="sound/theme.mp3" controls autoplay loop>Play theme</audio>
 
 </body>
 
