--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Pogeyman Titlescreen Demo</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" type="text/css" href="GBscroll.css"/>
+    <link rel="stylesheet" type="text/css" href="startupScroll.css"/>
 </head>
     
 <body id="background">
     <h1 style="color: aliceblue">Click the logo to continue!</h1>
     
     <div id="screen">
-        <a href="pogeman.html" ><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>    
+        <a href="titleScreen.html" ><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>    
     </div>   
     <audio src="sound/bing.mp3" controls autoplay>Play theme</audio>
 </body>
