added fade out transition and link

--- a/battle.html
+++ b/battle.html
@@ -7,6 +7,7 @@
 </head>
     
 <body id="background">
+    <a href="titleScreenEvolved.html" id="fade">Skip Intro</a>
     <div id="screen">
         <img src="image/gengar2.png" id="basegengar" class="gengar">
         <img src="image/gengar_up2.png" id="gengarup" class="gengar">
