combined title scroll and fade out on link

--- a/battle.html
+++ b/battle.html
@@ -7,11 +7,13 @@
 </head>
     
 <body id="background">
-    <a href="titleScreenEvolved.html" id="fade">Skip Intro</a>
     <div id="screen">
-        <img src="image/gengar2.png" id="basegengar" class="gengar">
-        <img src="image/gengar_up2.png" id="gengarup" class="gengar">
-        <img src="image/gengar_down2.png" id="gengardown" class="gengar">
+        <a href="titleScreenEvolved.html" id="link"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
+        <div id="battle">
+            <img src="image/gengar2.png" id="basegengar" class="gengar">
+            <img src="image/gengar_up2.png" id="gengarup" class="gengar">
+            <img src="image/gengar_down2.png" id="gengardown" class="gengar">
+        </div>
     </div> 
 
 
