added nidorino reaction to hit

--- a/battle.html
+++ b/battle.html
@@ -9,10 +9,15 @@
 <body id="background">
     <div id="screen">
         <a href="titleScreenEvolved.html" id="link"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
-        <div id="battle">
+        <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
             <img src="image/gengar_up2.png" id="gengarup" class="gengar">
             <img src="image/gengar_down2.png" id="gengardown" class="gengar">
+        </div>
+        <div id="nido">
+            <img src="image/nidorino2.png" id="basenidorino" class="nidorino">
+            <img src="image/nidojump.png" id="nidojump" class="nidorino">
+            <img src="image/nidorino_hit.png" id="nidoflinch" class="nidorino">
         </div>
     </div> 
 
