Added light effect to style.css and the html pages

--- a/battle.html
+++ b/battle.html
@@ -8,6 +8,7 @@
     
 <body id="background">
     <div id="screen">
+        
         <a href="titleScreenEvolved.html" id="link"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
@@ -19,6 +20,7 @@
             <img src="image/nidojump.png" id="nidojump" class="nidorino">
             <img src="image/nidorino_hit.png" id="nidoflinch" class="nidorino">
         </div>
+        <div class="shine light"></div>
     </div> 
 
 
