--- a/titleScreenEvolved.html
+++ b/titleScreenEvolved.html
@@ -23,6 +23,7 @@
             <a href="titleScreen.html" ><img src="image/Spr_RB_Red_22.png" alt="Trainer" id="trainer"></a>  
             
             <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">
+            <div class="shine light"></div>
             
             <img src="image/charz.png" class="pogey firstPogey">
             <img src="image/vene.png" class="pogey secondPogey">
