changed code so pokemon fade out on logo hover, pokemon and logo lower z-index on click and hold

--- a/battle.html
+++ b/battle.html
@@ -8,7 +8,8 @@
     
 <body id="background">
     <div id="screen">
-        <a href="titleScreenEvolved.html" id="link"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
+        <div id="block"></div>
+        <img src="image/LogoR.png" alt="NintendoR" id="logoR">
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
             <img src="image/gengar_up2.png" id="gengarup" class="gengar">
