changning logo so it is no longer a link

--- a/battle.html
+++ b/battle.html
@@ -9,7 +9,7 @@
 <body id="background">
     <div id="screen">
         <div id="block"></div>
-        <a href="titleScreenEvolved.html" id="link"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
+        <img src="image/LogoR.png" alt="NintendoR" id="logoR">
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
             <img src="image/gengar_up2.png" id="gengarup" class="gengar">
