Cleaned up walking animation and changed room tile background.

--- a/roomTest.html
+++ b/roomTest.html
@@ -23,7 +23,7 @@
             <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">       
             <div class="shine light"></div> 
             
-            <img id="room" src="image/room.png">
+            <img id="room" src="image/room2.png">
         </div>
     </div> 
 
