--- a/titleScreen.html
+++ b/titleScreen.html
@@ -22,8 +22,9 @@
             <img src="image/ball.png" alt="ball" id="ball">
             <a href="titleScreenEvolved.html" ><img src="image/Spr_RB_Red_22.png" alt="Trainer" id="trainer"></a>
 
-            <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">       
+            <img id="gameboy" src="image/Gameboy.png" alt="Gameboy" id="screen">       
             <div class="shine light"></div>
+            
             <img src="image/char.png" class="pogey firstPogey">
             <img src="image/bulba.png" class="pogey secondPogey">
             <img src="image/squrtle.png" class="pogey thirdPogey">
