Fixed walk animation cycles. Updated background to be infinite loop. Added walk screen music Changed titles of html and css files
Updated title data for each page.

--- a/battle.html
+++ b/battle.html
@@ -22,7 +22,7 @@
         </div>
         <div class="shine light"></div>
     </div> 
-
+    <audio src="sound/battle%20theme.mp3" controls autoplay loop>battle theme</audio>
 
 </body>
 
