--- a/titleScreenEvolved.html
+++ b/titleScreenEvolved.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-    <title>Pogeyman Titlescreen Demo</title>
+    <title>Pogeyman Titlescreen Evolved Demo</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="titleScreen.css"/>
 </head>
