readded link, tried and failed to add gameboy screen as it blocks interaction with elements

--- a/battle.html
+++ b/battle.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Pogeyman Battle Demo</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" type="text/css" href="battle.css"/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="battle.css" />
 </head>
-    
+
 <body id="background">
     <div id="screen">
-        <div id="block"></div>
-        <img src="image/LogoR.png" alt="NintendoR" id="logoR">
+
+        <a href="titleScreenEvolved.html"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
             <img src="image/gengar_up2.png" id="gengarup" class="gengar">
@@ -21,9 +22,9 @@
             <img src="image/nidorino_hit.png" id="nidoflinch" class="nidorino">
         </div>
         <div class="shine light"></div>
-    </div> 
+    </div>
     <audio src="sound/battle%20theme.mp3" controls autoplay loop>battle theme</audio>
 
 </body>
 
-</html> 
+</html>
