Gameboy added to battle screen

--- a/battle.html
+++ b/battle.html
@@ -10,6 +10,9 @@
 <body id="background">
     <div id="screen">
 
+        <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">
+        <img id="gameboyRight" src="image/GameboyRight.png" alt="Gameboy">
+        <div class="shine light"></div>
         <a href="titleScreenEvolved.html"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
