--- a/titleScreen.html
+++ b/titleScreen.html
@@ -14,7 +14,7 @@
         <div id="elements">
             <div id="logo">            
                 <img src="image/logo.png" alt="logo">
-                <img src="image/logoColor.png" alt="colorLogo" id="colorLogo">
+                <a href="battle.html" ><img src="image/logoColor.png" alt="colorLogo" id="colorLogo"></a>
             </div>
 
             <h3 id="versionText">CSS Version</h3>
