added link to original opening

--- a/battle.html
+++ b/battle.html
@@ -11,7 +11,7 @@
     <div id="screen">
 
         <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">
-        <img id="gameboyRight" src="image/GameboyRight.png" alt="Gameboy">
+        <a href="https://youtu.be/C19O5xm51dk"><img id="gameboyRight" src="image/GameboyRight.png" alt="Gameboy"></a>
         <div class="shine light"></div>
         <a href="titleScreenEvolved.html"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
         <div id="gengar">
