Fixed H1 and Audio tags for positioning updated text for each page description.

--- a/battle.html
+++ b/battle.html
@@ -8,6 +8,8 @@
 </head>
 
 <body id="background">
+    
+    <h1 style="color: aliceblue">Battle Demo</h1>
     <div id="screen">
 
         <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">
