--- a/battle.html
+++ b/battle.html
@@ -13,7 +13,7 @@
         <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">
         <a href="https://youtu.be/C19O5xm51dk"><img id="gameboyRight" src="image/GameboyRight.png" alt="Gameboy"></a>
         <div class="shine light"></div>
-        <a href="titleScreenEvolved.html"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
+        <a href="titleScreen.html"><img src="image/LogoR.png" alt="NintendoR" id="logoR"></a>
         <div id="gengar">
             <img src="image/gengar2.png" id="basegengar" class="gengar">
             <img src="image/gengar_up2.png" id="gengarup" class="gengar">
