Added Gameboy to Walking.html

--- a/walkCycle.html
+++ b/walkCycle.html
@@ -20,8 +20,8 @@
                 <img  id="walkDL" src="image/walkDL.png">
             </div>
             
-            <img id="gameboy" src="image/Gameboy.png" alt="Gameboy">       
-            <div class="shine light"></div> 
+            <img id="GameboyWalking" src="image/GameboyWalking.png" alt="GameboyWalking">       
+            <div class="shineWalk lightWalk"></div> 
             
             <img id="path" src="image/pathA.png">
         </div>
