--- a/walkCycle.html
+++ b/walkCycle.html
@@ -11,7 +11,7 @@
 <body id="background">
     <h1 style="color: aliceblue">Overworld Demo</h1>
 
-    <div id="screen">
+    <div id="screenHotfix">
 
         <div id="elements">
 
