--- a/summary.html
+++ b/summary.html
@@ -1,17 +1,36 @@
 <html>
 
 <head>
-
+<style>
+     @font-face { font-family: GameBoy; src: url('font/GameBoy.ttf'); } 
+    
+    .text {
+        font-family: "GameBoy";
+        background-color: #e8e8e8;
+        line-height: 150%;
+        font-size: 90%;
+    }
+</style>
 </head>
 
-<body>
-    <h1>Leader: </h1>
-    <h2>Pogeyman</h2>
+<body class="text">
+    <h1>Leader: Brett</h1>
+    <h2>"Pogeyman"</h2>
     <h3>A recreation of the Pokemon Red intro with interactable elements.</h3>
     <h4>
         <ul>
             <li>Platt, Noah - Design of the battle screen</li>
+            <li>Tognoni, Robert - 
+                <ul>
+                    <li>Title screen animations</li>
+                    <li>Overworld/walking animations</li>
+                    <li>Sprite and music <s>theft</s> editing</li>
+                    <li>Resident Ecologist and Pocket Monster Consultant</li>
+                </ul>
+            </li>
         </ul>
+        
+        <a href="https://fontmeme.com/fonts/early-gameboy-font/"><p>Font credit: Early GameBoy Font by Jimmy Campbell</p></a>
     </h4>
 </body>
 
