--- a/summary.html
+++ b/summary.html
@@ -1,16 +1,19 @@
 <html>
 
 <head>
-<style>
-     @font-face { font-family: GameBoy; src: url('font/GameBoy.ttf'); } 
-    
-    .text {
-        font-family: "GameBoy";
-        background-color: #e8e8e8;
-        line-height: 150%;
-        font-size: 90%;
-    }
-</style>
+    <style>
+        @font-face {
+            font-family: GameBoy;
+            src: url('font/GameBoy.ttf');
+        }
+
+        .text {
+            font-family: "GameBoy";
+            background-color: #e8e8e8;
+            line-height: 150%;
+            font-size: 90%;
+        }
+    </style>
 </head>
 
 <body class="text">
@@ -19,8 +22,14 @@
     <h3>A recreation of the Pokemon Red intro with interactable elements.</h3>
     <h4>
         <ul>
-            <li>Platt, Noah - Design of the battle screen</li>
-            <li>Tognoni, Robert - 
+            <li>Platt, Noah -
+                <ul>
+                    <li>Battle screen design</li>
+                    <li>Battle screen animations</li>
+                    <li>Cleaning code layout and proofreading</li>
+                </ul>
+            </li>
+            <li>Tognoni, Robert -
                 <ul>
                     <li>Title screen animations</li>
                     <li>Overworld/walking animations</li>
@@ -29,8 +38,10 @@
                 </ul>
             </li>
         </ul>
-        
-        <a href="https://fontmeme.com/fonts/early-gameboy-font/"><p>Font credit: Early GameBoy Font by Jimmy Campbell</p></a>
+
+        <a href="https://fontmeme.com/fonts/early-gameboy-font/">
+            <p>Font credit: Early GameBoy Font by Jimmy Campbell</p>
+        </a>
     </h4>
 </body>
 
