Summary.html update

--- a/summary.html
+++ b/summary.html
@@ -37,6 +37,13 @@
                     <li>Resident Ecologist and Pocket Monster Consultant</li>
                 </ul>
             </li>
+            <li>Krokoff, Brett
+                <ul>
+                    <li>Implemented physical gameboy for each screen</li>
+                    <li>Bug indetification and fixing</li>
+                    <li>Gym Leader</li>
+                </ul>
+            </li>
         </ul>
 
         <a href="https://fontmeme.com/fonts/early-gameboy-font/">
