--- a/summary.html
+++ b/summary.html
@@ -37,7 +37,7 @@
                     <li>Resident Ecologist and Pocket Monster Consultant</li>
                 </ul>
             </li>
-            <li>Krokoff, Brett
+            <li>Krokoff, Brett -
                 <ul>
                     <li>Implemented physical gameboy for each screen</li>
                     <li>Bug indetification and fixing</li>
